GNOME Bugzilla – Bug 763782
Fails to build: _SVID_SOURCE is deprecated
Last modified: 2016-03-17 10:08:29 UTC
I can't build the current Metacity master on Debian unstable because of: In file included from /usr/include/limits.h:25:0, [...] from ./include/util.h:26, from core/delete.c:27: /usr/include/features.h:148:3: error: #warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE" [-Werror=cpp] # warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE" ^ cc1: all warnings being treated as errors This is a warning, but -Werror is enabled by default so this currently makes the build fail. Metacity defines _SVID_SOURCE in several places (keybindings.c, delete.c, main.c, window-props.c).
Can you prepare patch? Found this in mutter, but it does not include delete.c: https://git.gnome.org/browse/mutter/commit/?id=b159d6a5e17219557574defb6c3788d9b0c39757
for delete.c: https://git.gnome.org/browse/mutter/commit/src/core/delete.c?id=604da0f6ea06223ed68ca18c1f45d58bc1e6bdab
Created attachment 324141 [details] [review] build: Use non-deprecated feature test macros This works fine for me.