build: Use non-deprecated feature test macros

_SVID_SOURCE has been deprecated in newer versions of glibc breaking -WError;
the recommended replacement of _DEFAULT_SOURCE is fairly new, so switch to
_XOPEN_SOURCE instead.

Based on mutter commits b159d6a5e17219557574defb6c3788d9b0c39757
and b159d6a5e17219557574defb6c3788d9b0c39757.

https://bugzilla.gnome.org/show_bug.cgi?id=763782

taken from:
https://git.gnome.org/browse/metacity/commit/?id=56bcf350fb599ec2caf68af4f0f92b1c3999027c