src/core/window-props.c
@@ -36,7 +36,7 @@
  */
 
 #define _GNU_SOURCE
-#define _SVID_SOURCE /* for gethostname() */
+#define _XOPEN_SOURCE /* for gethostname() */
 
 #include <config.h>
 #include "window-props.h"
